--- a/Bootstrap-Blog-app/bootstrap_blog_app.html
+++ b/Bootstrap-Blog-app/bootstrap_blog_app.html
@@ -11,13 +11,14 @@
     <link rel="stylesheet" href="D:\programming\web\web geliştirme\ikonlar\fontawesome-free-5.15.2-web\css\all.css">
 
     <style>
-    .mbb{
-        margin-top: -2px;
-        
-    }
-    nav li a:hover{
-        color: goldenrod!important;
-    }
+        .mbb {
+            margin-top: -2px;
+
+        }
+
+        nav li a:hover {
+            color: goldenrod !important;
+        }
     </style>
 </head>
 
@@ -28,7 +29,8 @@
     <nav class="navbar navbar-dark bg-dark border-bottom fixed-top navbar-expand-sm opacity-75">
         <div class="container">
             <ul class="nav">
-                <li class="nav-item mbb fs-4"><a href="" class="nav-link text-white"><i class="fab fa-accusoft"></i></a></li>
+                <li class="nav-item mbb fs-4"><a href="" class="nav-link text-white"><i class="fab fa-accusoft"></i></a>
+                </li>
                 <li class="nav-item"><a class="nav-link text-white" href="">
                         <h4>Blog Template</h4>
                     </a></li>
@@ -49,15 +51,26 @@
         </div>
     </nav>
     <header>
-        <div class="p-5 mb-4 bg-dark text-white">
-            <div class="container pt-5 pb-3">
-                <h1 class="display-5 fw-bold pt-5">Custom jumbotron</h1>
-                <p class="col-md-8 fs-4">Using a series of utilities, you can create this jumbotron, just like the one
-                    in previous versions of Bootstrap. Check out the examples below for how you can remix and restyle it
-                    to your liking.</p>
-                <p class="col-md-8 fs-4 fw-bold">Continue reading...</p>
-                <button class="btn btn-primary btn-lg mt-3" type="button">Example button</button>
+        <div class="p-5 mb-4 bg-dark text-white ">
+            <div class="container pt-5 pb-3 d-flex">
+                <div class="flex-start">
+                    <h1 class="display-5 fw-bold pt-5">Custom jumbotron</h1>
+                    <p class="col-md-8 fs-4">Using a series of utilities, you can create this jumbotron, just like the
+                        one
+                        in previous versions of Bootstrap. Check out the examples below for how you can remix and
+                        restyle it
+                        to your liking.</p>
+                    <p class="col-md-8 fs-4 fw-bold">Continue reading...</p>
+                    <button class="btn btn-primary btn-lg mt-3" type="button">Example button</button>
+                </div>
+                <div class="card bg-dark text-white flex-end mt-5 me-5">
+                    <img src="https://via.placeholder.com/720x720" class="card-img" alt="...">
+                    <div class="card-img-overlay">
+                      <h5 class="card-title">Placeholder</h5>
+                    </div>
+                  </div>
             </div>
+
         </div>
     </header>
 
