--- a/Bootstrap-Blog-app/bootstrap_blog_app.html
+++ b/Bootstrap-Blog-app/bootstrap_blog_app.html
@@ -63,12 +63,12 @@
                     <p class="col-md-8 fs-4 fw-bold">Continue reading...</p>
                     <button class="btn btn-primary btn-lg mt-3" type="button">Example button</button>
                 </div>
-                <div class="card bg-dark text-white flex-end mt-5 me-5">
+                <a href="#author" class="card bg-dark text-white flex-end mt-5 me-5">
                     <img src="https://via.placeholder.com/720x720" class="card-img" alt="...">
                     <div class="card-img-overlay">
                       <h5 class="card-title">Placeholder</h5>
                     </div>
-                  </div>
+                </a>
             </div>
 
         </div>
